fix: fix nav__cover z-index

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -129,7 +129,7 @@
   right: 0;
   bottom: 0;
   margin: auto;
-  z-index: 0;
+  z-index: 1;
 }
 
 .nav__list_opened {
